--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1><center>Bangladesh Tourism</center></h1>
    <a href="image/cttg/chittagang.html" title="chittagang"> <img src="image/ctg.jpg" alt="chittagong" width="300" height="auto"></a>
-    <img src="image/inani.jpg" alt="inani beach" width="300" height="auto" >
+   <a href="image/inaani/inaani.html" title="inaani beach"><img src="image/inani.jpg" alt="inani beach" width="300" height="auto" >
     <img src="image/jaflong.jpg" alt="jaflong" width="300" height="auto" >
     <img src="image/rangamati.jpg" alt="rangamati" width="300" height="auto" >
     <img src="image/ratargul.jpg" alt="ratargul" width="300" height="auto" >
