--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 <body>
     <h1><center>Bangladesh Tourism</center></h1>
    <a href="image/cttg/chittagang.html" title="chittagang"> <img src="image/ctg.jpg" alt="chittagong" width="300" height="auto"></a>
-   <a href="image/inaani/inaani.html" title="inaani beach"><img src="image/inani.jpg" alt="inani beach" width="300" height="auto" >
-    <a href="image/inaani/jafflong.html" title="jaflong"></a><img src="image/jaflong.jpg" alt="jaflong" width="300" height="auto" >
-    <img src="image/rangamati.jpg" alt="rangamati" width="300" height="auto" >
-    <img src="image/ratargul.jpg" alt="ratargul" width="300" height="auto" >
-    <img src="image/saint.jpg" alt="saint" width="300" height="auto" >
-    <img src="image/srimongol.jpg" alt="srimongol" width="300" height="auto" >
-    <img src="image/sundorban.jpg" alt="sundorban" width="300" height="auto" >
+   <a href="image/inaani/inaani.html" title="inaani beach"><img src="image/inani.jpg" alt="inani beach" width="300" height="auto" ></a>
+    <a href="image/jafflong/jafflong.html" title="jaflong"><img src="image/jaflong.jpg" alt="jaflong" width="300" height="auto" ></a>
+    <a href="image/rangamati/rangamati.html" title="Rangamati"><img src="image/rangamati.jpg" alt="rangamati" width="300" height="auto" ></a>
 </body>
 </html>
